--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         
                         <div>Voto: {{numberAsInteger(movie.vote_average)}}</div>
                         <i v-for="number in numberAsInteger(movie.vote_average)" class="fas fa-star"></i>
-
+                        <i class="far fa-star"></i>
 
                     </li>
 
