--- a/index.html
+++ b/index.html
@@ -34,17 +34,21 @@
 
                     <li v-for="movie in movieCollection">
 
-                        <div class="movie-poster"><img :src="'https://image.tmdb.org/t/p/w342' + movie.backdrop_path" alt=""></div>
+                        <div v-if="movie.backdrop_path != null" class="movie-poster"><img :src="'https://image.tmdb.org/t/p/w342' + movie.backdrop_path" alt=""></div>
+                        <div v-else>image not found</div>
                         
                         <div>Titolo: {{movie.title}} {{movie.name}}</div>
 
                         <div>Titolo originale: {{movie.original_title}} {{movie.original_name}}</div>
 
-                        <div class="language-flag">Lingua: <span><img src="img/it.svg" alt=""></span></div>
+                        <div class="language-flag">Lingua: 
+                            <span><img :src="'img/' + movie.original_language + '.svg'" alt=""></span>
+                            <span>{{movie.original_language}}</span>
+                        </div>
                         
                         <div>Voto: {{numberAsInteger(movie.vote_average)}}</div>
                         <i v-for="number in numberAsInteger(movie.vote_average)" class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
+                        <i v-for="n in 5 - numberAsInteger(movie.vote_average)" class="far fa-star"></i>
 
                     </li>
 
